--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.7
+  uuid: ^4.5.1
   firebase_storage: ^12.4.5
   tflite_flutter: ^0.11.0
   flutter:
