--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,6 @@ description: "A new Flutter project."
 
 publish_to: 'none'
 
-
 version: 1.0.0+1
 
 environment:
@@ -24,13 +23,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
   flutter_lints: ^5.0.0
-
 
 flutter:
 
-
   uses-material-design: true
 
-
+  assets:
+    - assets/images/splash.gif
