--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter_riverpod: ^2.6.1
   firebase_core: ^3.13.0
+  image: ^4.5.4
+  path_provider: ^2.1.5
   cloud_firestore: ^5.6.7
   uuid: ^4.5.1
   firebase_storage: ^12.4.5
