--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  sentry_flutter: ^8.14.2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
@@ -23,6 +24,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  sentry_dart_plugin: ^2.4.1
   flutter_test:
     sdk: flutter
 
@@ -34,3 +36,9 @@ flutter:
 
   assets:
     - assets/images/splash.gif
+
+sentry:
+  upload_debug_symbols: true
+  upload_source_maps: true
+  project: flutter-sns-app
+  org: 0624866916d0
