--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   tflite_flutter: ^0.11.0
   cupertino_icons: ^1.0.8
   firebase_analytics: ^11.4.5
+  go_router: ^15.1.2
   image_picker: ^1.1.2
 
 dev_dependencies:
