feat: 구글 폰트 패키지 추가

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,6 @@ app.*.map.json
 google-services.json
 firebase.json
 /lib/firebase_options.dart
-pubspec.lock
+echo "pubspec.lock"
 
 sentry.properties
