--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  google_fonts: ^6.2.1
   firebase_core: ^3.13.0
   image: ^4.5.4
   path_provider: ^2.1.5
