--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   sentry_flutter: ^8.14.2
+  shared_preferences: ^2.5.3
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
