--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   sentry_flutter: ^8.14.2
   shared_preferences: ^2.5.3
+  shared_preferences_android: ^2.4.10
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
