--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   firebase_analytics: ^11.4.5
   go_router: ^15.1.2
   image_picker: ^1.1.2
+  yolo_helper:
+    git:
+      url: https://github.com/fhelper/flutter-yolo-helper.git
+      ref: main
 
 dev_dependencies:
   sentry_dart_plugin: ^2.4.1
@@ -42,6 +46,8 @@ flutter:
 
   assets:
     - assets/images/splash.gif
+    - assets/yolov8n.tflite
+    - assets/labels.txt
 
 sentry:
   upload_debug_symbols: true
