--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   firebase_core: ^3.13.0
-  image: ^4.5.4
   path_provider: ^2.1.5
   cloud_firestore: ^5.6.7
   uuid: ^4.5.1
@@ -25,6 +24,7 @@ dependencies:
   firebase_analytics: ^11.4.5
   go_router: ^15.1.2
   image_picker: ^1.1.2
+  flutter_image_filters: ^0.0.26
 
 dev_dependencies:
   sentry_dart_plugin: ^2.4.1
