--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   cloud_firestore: ^5.6.7
   firebase_storage: ^12.4.5
   sentry_flutter: ^8.14.2
-  image: ^4.5.4
 
   path_provider: ^2.1.5
   uuid: ^4.5.1
@@ -31,7 +30,6 @@ dependencies:
   flutter_image_filters: ^0.0.26
 
   shared_preferences: ^2.0.15
-  image_picker: ^0.8.7+5
   google_fonts: ^5.0.0
 
   yolo_helper:
@@ -52,6 +50,7 @@ flutter:
   assets:
     - assets/images/background.png
     - assets/images/icon.png
+    - assets/
 
 sentry:
   upload_debug_symbols: true
