--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   sentry_dart_plugin: ^2.4.1
+  change_app_package_name: ^1.5.0
 
 flutter:
   uses-material-design: true
