add : http 패키지 추가가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
       url: https://github.com/fhelper/flutter-yolo-helper.git
       ref: main
   image: ^4.5.4
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
